fixed mobile menu overflow:hidden

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -230,10 +230,10 @@
             width: 100%
             height: 100%
             background-color: $bg
-            padding-top: 140px
+            padding-top: 170px
             overflow: auto
             transition: all 0.4s ease 0s
-            flex-direction: column
+            display: grid
             &.active
                 top: 0
         &__list
@@ -241,11 +241,23 @@
             grid-row-gap: 50px
             width: 100%
             justify-content: center
-            overflow: hidden
+            overflow-y: auto
+            margin: 30px 0px 30px 0px
         &__item
             justify-self: center
             &--mb
                 display: block
+        &__link
+            font-size: 21px
+            line-height: 25px
+        .sign
+            &-up--mb
+                padding: 16px 28px
+                font-size: 21px
+                line-height: 25px
+            &-in--mb
+                font-size: 21px
+                line-height: 25px
         &__profile
             display: none
         &__burger
@@ -292,6 +304,7 @@
                         transform-origin: 5%
                         transform: rotate(-45deg)
                         width: 44px
+
     .main
         &-slide
             display: flex
